@@ -24,8 +24,6 @@ import org.openrewrite.ExecutionContext;
 import org.openrewrite.InMemoryExecutionContext;
 import org.openrewrite.Parser;
 import org.openrewrite.SourceFile;
-import org.openrewrite.config.Environment;
-import org.openrewrite.internal.ManagedThreadLocal;
 import org.openrewrite.javascript.rpc.JavaScriptRewriteRpc;
 import org.openrewrite.javascript.tree.JS;
 
@@ -33,36 +31,25 @@ import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class JavaScriptParserTest {
-
-    JavaScriptRewriteRpc rewriteRpc;
     JavaScriptParser parser;
     ExecutionContext ctx;
-    ManagedThreadLocal.Scope<JavaScriptRewriteRpc> scope;
 
     @BeforeEach
     void before() {
-        this.rewriteRpc = JavaScriptRewriteRpc.builder(Environment.builder().build())
-          .nodePath(Path.of("node"))
-          .installationDirectory(Path.of("./rewrite/dist"))
-//          .inspectAndBreak()
-//          .trace(true)
-          .build();
-        this.scope = JavaScriptRewriteRpc.current().using(rewriteRpc);
-        this.parser = JavaScriptParser.builder().rewriteRpc(rewriteRpc).build();
+//        JavaScriptRewriteRpc.setFactory(JavaScriptRewriteRpc.builder().trace(true));
+        this.parser = JavaScriptParser.builder().build();
         this.ctx = new InMemoryExecutionContext();
     }
 
     @AfterEach
     void after() {
-        scope.close();
-        rewriteRpc.close();
+        JavaScriptRewriteRpc.shutdownCurrent();
     }
 
     @Test
@@ -71,11 +58,11 @@ class JavaScriptParserTest {
         String helloWorld = """
           console.info("Hello world!")
           """;
-        Parser.Input input = Parser.Input.fromString(Paths.get("helloworld.js"), helloWorld);
+        Parser.Input input = Parser.Input.fromString(Path.of("helloworld.js"), helloWorld);
         Optional<SourceFile> javascript = parser.parseInputs(List.of(input), null, ctx).findFirst();
         assertThat(javascript).containsInstanceOf(JS.CompilationUnit.class);
         assertThat(javascript.get()).satisfies(cu ->
-            assertThat(cu.getSourcePath()).isEqualTo(input.getPath()));
+          assertThat(cu.getSourcePath()).isEqualTo(input.getPath()));
     }
 
     @Test
@@ -84,8 +71,8 @@ class JavaScriptParserTest {
         String helloWorld = """
           console.info("Hello world!")
           """;
-        Parser.Input input1 = Parser.Input.fromString(Paths.get("helloworld1.js"), helloWorld);
-        Parser.Input input2 = Parser.Input.fromString(Paths.get("helloworld2.js"), helloWorld);
+        Parser.Input input1 = Parser.Input.fromString(Path.of("helloworld1.js"), helloWorld);
+        Parser.Input input2 = Parser.Input.fromString(Path.of("helloworld2.js"), helloWorld);
 
         List<SourceFile> sourceFiles = parser.parseInputs(List.of(input1, input2), null, ctx).toList();
         assertThat(sourceFiles).hasSize(2);
@@ -101,19 +88,20 @@ class JavaScriptParserTest {
           const message: string = "Hello world!";
           console.info(message);
           """;
-        Parser.Input input = Parser.Input.fromString(Paths.get("helloworld.ts"), helloWorld);
-        Optional<SourceFile> typescript = parser.parseInputs(List.of(input), Paths.get("helloworld.ts").toAbsolutePath().getParent(), ctx).findFirst();
+        Parser.Input input = Parser.Input.fromString(Path.of("helloworld.ts"), helloWorld);
+        Optional<SourceFile> typescript = parser.parseInputs(List.of(input), Path.of("helloworld.ts").toAbsolutePath().getParent(), ctx).findFirst();
         assertThat(typescript).containsInstanceOf(JS.CompilationUnit.class);
         assertThat(typescript.get()).satisfies(cu ->
-            assertThat(cu.getSourcePath()).isEqualTo(input.getPath()));
+          assertThat(cu.getSourcePath()).isEqualTo(input.getPath()));
     }
 
+    @SuppressWarnings({"TypeScriptUnresolvedReference", "HtmlUnknownAttribute"})
     @Test
     void tsx() {
         @Language("tsx")
         String script = """
           import React from 'react';
-
+          
           const JSXConstructsExample = () => {
             // Props object for spread attribute demonstration
             const buttonProps = {
@@ -121,29 +109,29 @@ class JavaScriptParserTest {
               disabled: false,
               'data-testid': 'spread-button'
             };
-
+          
             const linkProps = {
               href: 'https://example.com',
               target: '_blank',
               rel: 'noopener noreferrer'
             };
-
+          
             return (
               <React.Fragment>
                 {/* Fragment - wrapping multiple elements without extra DOM node */}
-
+          
                 {/* Basic JSX Element with attributes */}
                 <div className="container" id="main-container" data-test="element-example">
                   <h1 title="Main heading">JSX Constructs Test</h1>
-
+          
                   {/* Element with spread attributes */}
                   <button {...buttonProps} onClick={() => alert('Spread attributes work!')}>
                     Button with Spread Props
                   </button>
-
+          
                   {/* Another spread attribute example */}
                   <a {...linkProps}>Link with Spread Props</a>
-
+          
                   {/* Namespace example (commonly used with SVG) */}
                   <svg width="50" height="50" xmlns="http://www.w3.org/2000/svg">
                     <circle
@@ -155,7 +143,7 @@ class JavaScriptParserTest {
                       custom:attribute="namespace-example"
                     />
                   </svg>
-
+          
                   {/* Mixed attributes: regular, spread, and namespaced */}
                   <div
                     className="mixed-example"
@@ -165,7 +153,7 @@ class JavaScriptParserTest {
                   >
                     <p>This div uses regular attributes, spread attributes, and namespaced attributes</p>
                   </div>
-
+          
                   {/* JSX elements with generics */}
                   <DataTable<User> data={[]} />
                   <Component<string, number> prop="value" />
@@ -173,7 +161,7 @@ class JavaScriptParserTest {
                     <Input name="username" />
                   </Form>
                 </div>
-
+          
                 {/* Short fragment syntax */}
                 <>
                   <p>This paragraph is in a short fragment syntax</p>
@@ -182,21 +170,21 @@ class JavaScriptParserTest {
               </React.Fragment>
             );
           };
-
+          
           export default JSXConstructsExample;
           """;
-        Parser.Input input = Parser.Input.fromString(Paths.get("helloworld.tsx"), script);
+        Parser.Input input = Parser.Input.fromString(Path.of("helloworld.tsx"), script);
         Optional<SourceFile> typescript = parser.parseInputs(List.of(input), null, ctx).findFirst();
         assertThat(typescript).containsInstanceOf(JS.CompilationUnit.class);
         assertThat(typescript.get()).satisfies(cu ->
-            assertThat(cu.getSourcePath()).isEqualTo(input.getPath()));
+          assertThat(cu.getSourcePath()).isEqualTo(input.getPath()));
     }
 
     @Test
     @Disabled
     void complexTypeScript() throws Exception {
         URL url = URI.create("https://raw.githubusercontent.com/sinclairzx81/typebox/f958156785350aa052c5f822bc2970d0945d887b/src/syntax/parser.ts").toURL();
-        Parser.Input input = new Parser.Input(Paths.get("parser.ts"), null, () -> {
+        Parser.Input input = new Parser.Input(Path.of("parser.ts"), null, () -> {
             try {
                 return url.openStream();
             } catch (IOException e) {
