@@ -17,12 +17,9 @@ package org.openrewrite.javascript.rpc;
 
 import org.intellij.lang.annotations.Language;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.openrewrite.*;
-import org.openrewrite.config.Environment;
-import org.openrewrite.internal.ManagedThreadLocal;
 import org.openrewrite.java.JavaIsoVisitor;
 import org.openrewrite.java.JavaVisitor;
 import org.openrewrite.java.tree.J;
@@ -33,11 +30,7 @@ import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 
 import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
-import java.io.PrintStream;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 
@@ -49,32 +42,11 @@ import static org.openrewrite.test.SourceSpecs.text;
 
 @Disabled
 class JavaScriptRewriteRpcTest implements RewriteTest {
-
-    JavaScriptRewriteRpc client;
-    PrintStream log;
-    ManagedThreadLocal.Scope<JavaScriptRewriteRpc> scope;
-
-    @BeforeEach
-    void before() throws FileNotFoundException {
-        this.log = new PrintStream(new FileOutputStream("rpc.java.log"));
-        this.client = JavaScriptRewriteRpc.builder(Environment.builder().build())
-          .nodePath(Path.of("node"))
-          .installationDirectory(Path.of("./rewrite/dist"))
-//          .inspectAndBreak()
-//          .timeout(Duration.ofMinutes(10))
-          .build();
-        this.scope = JavaScriptRewriteRpc.current().using(client);
-
-//        client
-//          .traceGetObjectOutput()
-//          .traceGetObjectInput(log);
-    }
+    JavaScriptRewriteRpc client = JavaScriptRewriteRpc.getOrStart();
 
     @AfterEach
     void after() {
-        scope.close();
-        log.close();
-        client.close();
+        JavaScriptRewriteRpc.shutdownCurrent();
     }
 
     @Override
@@ -110,10 +82,9 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
         );
     }
 
-
     @Test
     void printJava() {
-        assertThat(client.installRecipes(new File("rewrite/dist/test/modify-all-trees.js")))
+        assertThat(client.installRecipes(new File("rewrite/dist-fixtures/modify-all-trees.js")))
           .isEqualTo(1);
         Recipe modifyAll = client.prepareRecipe("org.openrewrite.java.test.modify-all-trees");
 
@@ -165,14 +136,14 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
         assertThat(recipe.getDescriptor().getDisplayName()).isEqualTo("Change version in `package.json`");
     }
 
+    @SuppressWarnings("JSUnusedLocalSymbols")
     @Test
     void parseAndPrintJavaScript() {
         // language=javascript
         String source = "const two = 1 + 1";
 
-        SourceFile cu = JavaScriptParser.builder().rewriteRpc(client).build()
-          .parseInputs(List.of(Parser.Input.fromString(
-          Paths.get("test.js"), source)), null, new InMemoryExecutionContext()).findFirst().get();
+        SourceFile cu = JavaScriptParser.builder().build().parseInputs(List.of(Parser.Input.fromString(
+          Path.of("test.js"), source)), null, new InMemoryExecutionContext()).findFirst().orElseThrow();
 
         new JavaIsoVisitor<Integer>() {
             @Override
@@ -203,7 +174,7 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
             "Hello Jon!",
             spec -> spec.beforeRecipe(text -> {
                 text = Markup.info(text, "INFO", null);
-                String fence = "{{" + text.getMarkers().getMarkers().get(0).getId() + "}}";
+                String fence = "{{" + text.getMarkers().getMarkers().getFirst().getId() + "}}";
                 assertThat(client.print(text, Print.MarkerPrinter.FENCED)).isEqualTo(fence + "Hello Jon!" + fence);
             })
           )
@@ -252,7 +223,7 @@ class JavaScriptRewriteRpcTest implements RewriteTest {
     }
 
     private void installRecipes() {
-        File exampleRecipes = new File("rewrite/dist/test/example-recipe.js");
+        File exampleRecipes = new File("rewrite/dist-fixtures/example-recipe.js");
         assertThat(exampleRecipes).exists();
         assertThat(client.installRecipes(exampleRecipes)).isGreaterThan(0);
     }
